native/tests/snapshots/parse_tests__parse_htm.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 20,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 1,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 1,
                end_byte: 2,
                kind: "tag",
            },
            HighlightToken {
                start_byte: 2,
                end_byte: 3,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 8,
                end_byte: 10,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 10,
                end_byte: 11,
                kind: "tag",
            },
            HighlightToken {
                start_byte: 11,
                end_byte: 12,
                kind: "punctuation.bracket",
            },
        ],
        [],
    ],
    outline: [],
}
