native/tests/snapshots/parse_tests__parse_html.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 21,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 1,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 1,
                end_byte: 4,
                kind: "tag",
            },
            HighlightToken {
                start_byte: 5,
                end_byte: 10,
                kind: "attribute",
            },
            HighlightToken {
                start_byte: 12,
                end_byte: 13,
                kind: "string",
            },
            HighlightToken {
                start_byte: 14,
                end_byte: 15,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 17,
                end_byte: 19,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 19,
                end_byte: 22,
                kind: "tag",
            },
            HighlightToken {
                start_byte: 22,
                end_byte: 23,
                kind: "punctuation.bracket",
            },
        ],
        [],
    ],
    outline: [],
}
