native/tests/snapshots/parse_tests__parse_ini.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 14,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 1,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 1,
                end_byte: 8,
                kind: "type",
            },
            HighlightToken {
                start_byte: 8,
                end_byte: 9,
                kind: "punctuation.bracket",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 3,
                kind: "property",
            },
            HighlightToken {
                start_byte: 4,
                end_byte: 5,
                kind: "operator",
            },
        ],
        [],
    ],
    outline: [],
}
