native/tests/snapshots/parse_tests__parse_java.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 15,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 6,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 7,
                end_byte: 12,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 13,
                end_byte: 17,
                kind: "type",
            },
            HighlightToken {
                start_byte: 20,
                end_byte: 26,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 27,
                end_byte: 33,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 34,
                end_byte: 38,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 39,
                end_byte: 43,
                kind: "function",
            },
            HighlightToken {
                start_byte: 44,
                end_byte: 50,
                kind: "type",
            },
            HighlightToken {
                start_byte: 53,
                end_byte: 54,
                kind: "variable",
            },
            HighlightToken {
                start_byte: 58,
                end_byte: 69,
                kind: "comment",
            },
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "Main",
            detail: "",
            start_byte: 16,
            end_byte: 89,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "main",
                    detail: "",
                    start_byte: 36,
                    end_byte: 87,
                    children: [],
                },
            ],
        },
    ],
}
