native/tests/snapshots/parse_tests__parse_json.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [],
        [
            HighlightToken {
                start_byte: 2,
                end_byte: 7,
                kind: "property",
            },
            HighlightToken {
                start_byte: 9,
                end_byte: 16,
                kind: "string",
            },
            HighlightToken {
                start_byte: 18,
                end_byte: 45,
                kind: "comment",
            },
        ],
        [],
        [],
    ],
    outline: [],
}
