native/tests/snapshots/parse_tests__parse_kts.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 14,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 7,
                kind: "function",
            },
            HighlightToken {
                start_byte: 7,
                end_byte: 8,
                kind: "punctuation.bracket",
            },
            HighlightToken {
                start_byte: 8,
                end_byte: 12,
                kind: "string",
            },
            HighlightToken {
                start_byte: 12,
                end_byte: 13,
                kind: "punctuation.bracket",
            },
        ],
        [],
    ],
    outline: [],
}
